# ncexe

./: Cargo.toml  build.rs  ncexe.code-workspace  readme.md
.devcontainer/: devcontainer.json
examples/: bytes.rs  color_yaml.rs  colour_testing.rs  exe_format.rs  maps.rs  on_enter.rs  trait_closure.rs  trait_vector.rs  window_testing.rs
examples/color_pgm/: colors.c
examples/move_pgm/: move.c
src/: color.rs  configuration.rs  curses.rs  elf.rs  file_list_window.rs  formatter.rs  header_window.rs  lib.rs  macho32.rs  macho64.rs  main.rs  main_window.rs  scrollwindow.rs  window.rs
src/exe_types/: elf.rs  mach_o_64.rs  macho32.rs  macho64.rs  mod.rs  notexe.rs
src/old_windows/: file_list_window.rs  header_window.rs  mod.rs  screen.rs
src/screens/: details_list.rs  file_header.rs  file_list.rs  mod.rs  terminal.rs
src/windows/: details.rs  file_list_window.rs  footer copy.rs  footer.rs  header.rs  header_window.rs  line.rs  list_window.rs  mod.rs  popup.rs  screen.rs  scrollable_region.rs  window.rs
tests/: Ints.yaml  SampleFormat.yaml  bytes.rs  exe_format.rs  goodconfig.yaml  ncurses_testing.rs  window_testing.rs
tests/color_pgm/: colors
tests/move_pgm/: move
