[package]
name = "ncexe"
version = "24.1.0"
edition = "2021"

[dependencies]
anyhow = "^1"
clap = { version = "^4.4.8", features = ["derive"]}
crossterm = "0.28"
dirs = "^5.0"
hex = "^0"
hex-literal = "^0"
memmap2 = "0"
once_cell = "^1.19"
ratatui = "0.28"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
